--- a/Cargo.toml
+++ b/Cargo.toml
@@ -44,6 +44,7 @@ futures-core = "0.3.28"
 tokio-stream = { version = "0.1.14", features = ["sync"] }
 futures-util = "0.3.28"
 async-stream = "0.3.5"
+async-recursion = "1.0.5"
 serde_with = "3.4.0"
 mithril-client = { version = "^0.8", optional = true, features = ["fs"] }
 protoc-wkt = "1.0.0"
