ci: fix arm release builds

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -85,3 +85,6 @@ install-updater = false
 [workspace.metadata.release]
 push = false
 publish = false
+
+[workspace.metadata.dist.github-custom-runners]
+aarch64-apple-darwin = "macos-14"
