--- a/examples/sync-preprod/dolos.toml
+++ b/examples/sync-preprod/dolos.toml
@@ -30,6 +30,6 @@ listen_address = "[::]:30013"
 magic = 1
 
 [logging]
-max_level = "trace"
+max_level = "info"
 # include_pallas = true
 # include_tonic = true
