--- a/examples/sync-mainnet/dolos.toml
+++ b/examples/sync-mainnet/dolos.toml
@@ -4,7 +4,7 @@ network_magic = 764824073
 is_testnet = false
 
 [storage]
-path = "./tmp/rolldb"
+path = "./data"
 wal_size = 1000
 
 [sync]
@@ -22,8 +22,8 @@ alonzo_path = "./alonzo.json"
 listen_address = "[::]:50051"
 
 [serve.ouroboros]
-listen_address = "localhost:30013"
-magic = 0
+listen_address = "[::]:30013"
+magic = 764824073
 
 [logging]
 max_level = "debug"
