--- a/Cargo.toml
+++ b/Cargo.toml
@@ -50,13 +50,15 @@ itertools = "0.12.1"
 indicatif = "0.17.8"
 trait-variant = "0.1.2"
 comfy-table = { version = "7.1.1", optional = true }
+inquire = { version = "0.7.5", optional = true }
+toml = { version = "0.8.13", optional = true }
 
 [dev-dependencies]
 tempfile = "3.3.0"
 
 [features]
 mithril = ["mithril-client"]
-utils = ["comfy-table"]
+utils = ["comfy-table", "inquire", "toml"]
 default = ["mithril", "utils"]
 
 # The profile that 'cargo dist' will build with
