--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,7 +16,8 @@ pallas = { git = "https://github.com/txpipe/pallas.git", features = ["unstable"]
 # pallas = { version = "^0.25", features = ["unstable"] }
 # pallas = { path = "../pallas/pallas", features = ["unstable"] }
 
-gasket = { version = "^0.8", features = ["derive"] }
+gasket = { git = "https://github.com/construkts/gasket-rs.git", features = ["derive"] }
+# gasket = { version = "^0.8", features = ["derive"] }
 # gasket = { path = "../../construkts/gasket-rs/gasket", features = ["derive"] }
 
 redb = { version = "^2" }
@@ -33,7 +34,8 @@ tracing = "0.1.37"
 tracing-subscriber = "0.3.17"
 bincode = "1.3.3"
 miette = { version = "7.2.0", features = ["fancy"] }
-tokio = { version = "1.28.2", features = ["rt", "rt-multi-thread"] }
+tokio = { version = "^1.36", features = ["rt", "rt-multi-thread", "signal"] }
+tokio-util = { version = "0.7.11", features = ["rt"] }
 async-trait = "0.1.68"
 tonic = { version = "^0.11", features = ["tls"] }
 tonic-web = "^0.11"
