--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -22,7 +22,7 @@ jobs:
           # don't change `Linux` or `arm64` to avoid breaking the
           # install script because it relies on the `uname` outputs
           - release_for: Linux-arm64
-            build_on: ubuntu-latest
+            build_on: buildjet-2vcpu-ubuntu-2204-arm
             target: "aarch64-unknown-linux-gnu"
             # we skip mithril because of no support for cross compile
             # args: "--locked --release --no-default-features"
