--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -12,20 +12,14 @@ jobs:
     strategy:
       matrix:
         include:
-          # don't change `Linux` or `x86_64` to avoid breaking the
-          # install script because it relies on the `uname` outputs
           - release_for: Linux-x86_64
             build_on: ubuntu-latest
             target: x86_64-unknown-linux-gnu
             args: "--locked --release"
 
-          # don't change `Linux` or `arm64` to avoid breaking the
-          # install script because it relies on the `uname` outputs
           - release_for: Linux-arm64
             build_on: buildjet-2vcpu-ubuntu-2204-arm
             target: "aarch64-unknown-linux-gnu"
-            # we skip mithril because of no support for cross compile
-            # args: "--locked --release --no-default-features"
             args: "--locked --release"
 
     runs-on: ${{ matrix.build_on }}
@@ -38,13 +32,14 @@ jobs:
         with:
           shared-key: "release"
 
-      - name: build binary
-        uses: houseabsolute/actions-rust-cross@v0
+      - name: Install stable toolchain
+        uses: actions-rs/toolchain@v1
+
+      - name: Run cargo build
+        uses: actions-rs/cargo@v1
         with:
           command: build
-          target: ${{ matrix.target }}
-          args: ${{ matrix.args }}
-          strip: true
+          args: --target ${{ matrix.target }} ${{ matrix.args }}
 
       - name: rename binaries
         run: |
