--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -34,6 +34,8 @@ jobs:
 
       - name: Install stable toolchain
         uses: actions-rs/toolchain@v1
+        with:
+          toolchain: stable
 
       - name: Run cargo build
         uses: actions-rs/cargo@v1
