--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -1,6 +1,5 @@
 name: Docker
 on:
-  workflow_dispatch: {}
   push:
     tags:
       - "v*"
@@ -78,6 +77,7 @@ jobs:
             type=semver,pattern=v{{major}}
             type=semver,pattern=v{{major}}.{{minor}}
             type=semver,pattern=v{{version}}
+            type=sha
 
       - name: Login to DockerHub
         uses: docker/login-action@v3
