--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,9 +12,9 @@ authors = ["Santiago Carmuega <santiago@carmuega.me>"]
 
 
 [dependencies]
-pallas = { git = "https://github.com/txpipe/pallas.git", features = ["unstable"] }
-# pallas = { version = "^0.25", features = ["unstable"] }
-# pallas = { path = "../pallas/pallas", features = ["unstable"] }
+pallas = { git = "https://github.com/txpipe/pallas.git", features = ["hardano", "applying"] }
+# pallas = { version = "^0.25", features = ["hardano", "applying"] }
+# pallas = { path = "../pallas/pallas", features = ["hardano", "applying"] }
 
 gasket = { git = "https://github.com/construkts/gasket-rs.git", features = ["derive"] }
 # gasket = { version = "^0.8", features = ["derive"] }
