--- a/Cargo.toml
+++ b/Cargo.toml
@@ -54,7 +54,7 @@ trait-variant = "0.1.2"
 comfy-table = { version = "7.1.1", optional = true }
 inquire = { version = "0.7.5", optional = true }
 toml = { version = "0.8.13", optional = true }
-console-subscriber = { verion = "0.3.0", optional = true }
+console-subscriber = { version = "0.3.0", optional = true }
 
 [dev-dependencies]
 tempfile = "3.3.0"
