--- a/Cargo.toml
+++ b/Cargo.toml
@@ -54,6 +54,7 @@ trait-variant = "0.1.2"
 comfy-table = { version = "7.1.1", optional = true }
 inquire = { version = "0.7.5", optional = true }
 toml = { version = "0.8.13", optional = true }
+console-subscriber = { version = "0.3.0", optional = true }
 
 [dev-dependencies]
 tempfile = "3.3.0"
@@ -61,6 +62,7 @@ tempfile = "3.3.0"
 [features]
 mithril = ["mithril-client"]
 utils = ["comfy-table", "inquire", "toml"]
+debug = ["console-subscriber", "tokio/tracing"]
 default = ["mithril", "utils"]
 
 # The profile that 'cargo dist' will build with
