--- a/Cargo.toml
+++ b/Cargo.toml
@@ -46,7 +46,11 @@ tokio-stream = { version = "0.1.14", features = ["sync"] }
 futures-util = "0.3.28"
 async-stream = "0.3.5"
 serde_with = "3.8.1"
-mithril-client = { version = "^0.8", optional = true, features = ["fs"] }
+mithril-client = { git = "https://github.com/input-output-hk/mithril.git", optional = true, features = [
+    "fs",
+    "rustls-tls",
+    "rustls-tls-webpki-roots",
+], default-features = false }
 protoc-wkt = "1.0.0"
 itertools = "0.12.1"
 indicatif = "0.17.8"
