--- a/Cargo.toml
+++ b/Cargo.toml
@@ -59,14 +59,18 @@ comfy-table = { version = "7.1.1", optional = true }
 inquire = { version = "0.7.5", optional = true }
 toml = { version = "0.8.13", optional = true }
 console-subscriber = { version = "0.3.0", optional = true }
+wasmtime = { version = "23.0.1", optional = true }
+warp = { version = "0.3.7", optional = true }
+
 
 [dev-dependencies]
 tempfile = "3.3.0"
 
 [features]
-mithril = ["mithril-client"]
-utils = ["comfy-table", "inquire", "toml"]
-debug = ["console-subscriber", "tokio/tracing"]
+mithril = ["dep:mithril-client"]
+utils = ["dep:comfy-table", "dep:inquire", "dep:toml"]
+debug = ["dep:console-subscriber", "tokio/tracing"]
+offchain = ["dep:wasmtime", "dep:warp"]
 default = ["mithril", "utils"]
 
 # The profile that 'cargo dist' will build with
