--- a/Cargo.toml
+++ b/Cargo.toml
@@ -59,6 +59,9 @@ comfy-table = { version = "7.1.1", optional = true }
 inquire = { version = "0.7.5", optional = true }
 toml = { version = "0.8.13", optional = true }
 console-subscriber = { version = "0.3.0", optional = true }
+flate2 = "1.0.33"
+tar = "0.4.41"
+reqwest = { version = "0.12.7", features = ["blocking"] }
 
 [dev-dependencies]
 tempfile = "3.3.0"
