--- a/Cargo.toml
+++ b/Cargo.toml
@@ -37,9 +37,9 @@ miette = { version = "7.2.0", features = ["fancy"] }
 tokio = { version = "^1.36", features = ["rt", "rt-multi-thread", "signal"] }
 tokio-util = { version = "0.7.11", features = ["rt"] }
 async-trait = "0.1.81"
-tonic = { version = "^0.11", features = ["tls"] }
-tonic-web = "^0.11"
-tonic-reflection = "^0.11"
+tonic = { version = "0.12.3", features = ["tls"] }
+tonic-web = "0.12.3"
+tonic-reflection = "0.12.3"
 bytes = "1.4.0"
 futures-core = "0.3.28"
 tokio-stream = { version = "0.1.14", features = ["sync"] }
