--- a/Cargo.toml
+++ b/Cargo.toml
@@ -62,7 +62,7 @@ console-subscriber = { version = "0.3.0", optional = true }
 flate2 = "1.0.33"
 tar = "0.4.41"
 reqwest = { version = "0.12.7", features = ["blocking"] }
-tower-http = "0.4.4"
+tower-http = { version = "0.6.1", features = ["cors"] }
 
 [dev-dependencies]
 tempfile = "3.3.0"
