--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,7 +14,7 @@ authors = ["Santiago Carmuega <santiago@carmuega.me>"]
 [dependencies]
 pallas = { git = "https://github.com/txpipe/pallas.git", features = ["hardano", "applying"] }
 # pallas = { version = "^0.30.1", features = ["hardano", "applying"] }
-# pallas = { path = "../pallas/pallas", features = ["hardano", "applying"] }
+#pallas = { path = "../pallas/pallas", features = ["hardano", "applying"] }
 
 gasket = { git = "https://github.com/construkts/gasket-rs.git", features = ["derive"] }
 # gasket = { version = "^0.8", features = ["derive"] }
@@ -62,6 +62,7 @@ console-subscriber = { version = "0.3.0", optional = true }
 flate2 = "1.0.33"
 tar = "0.4.41"
 reqwest = { version = "0.12.7", features = ["blocking"] }
+paste = "1.0.15"
 tower-http = { version = "0.6.1", features = ["cors"] }
 
 [dev-dependencies]
