--- a/Cargo.toml
+++ b/Cargo.toml
@@ -61,7 +61,7 @@ toml = { version = "0.8.13", optional = true }
 console-subscriber = { version = "0.3.0", optional = true }
 flate2 = "1.0.34"
 tar = "0.4.41"
-reqwest = { version = "0.12.7", features = ["blocking"] }
+reqwest = { version = "0.12.7", default-features = false, features = ["blocking", "rustls-tls"] }
 paste = "1.0.15"
 tower-http = { version = "0.6.1", features = ["cors"] }
 
