--- a/examples/sync-preview/dolos.toml
+++ b/examples/sync-preview/dolos.toml
@@ -11,6 +11,7 @@ max_wal_history = 10000
 byron_path = "byron.json"
 shelley_path = "shelley.json"
 alonzo_path = "alonzo.json"
+conway_path = "conway.json"
 
 [sync]
 pull_batch_size = 100
