--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,7 +31,12 @@ serde_json = "1.0.122"
 thiserror = "1.0.30"
 lazy_static = "1.4.0"
 tracing = "0.1.37"
-tracing-subscriber = "0.3.17"
+tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
+opentelemetry-appender-tracing = { version = "0.27.0", default-features = false}
+opentelemetry = { version = "0.27.0", default-features = false, features = ["trace"] }
+opentelemetry_sdk = { version = "0.27.0", default-features = false, features = ["trace", "rt-tokio"] }
+opentelemetry-http = { version = "0.27.0", default-features = false}
+opentelemetry-otlp = { version = "0.27.0", features = ["logs", "http-json", "reqwest-client"] }
 bincode = "1.3.3"
 miette = { version = "7.2.0", features = ["fancy"] }
 tokio = { version = "^1.40", features = ["rt", "rt-multi-thread", "signal"] }
