--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,7 +31,7 @@ serde_json = "1.0.122"
 thiserror = "1.0.30"
 lazy_static = "1.4.0"
 tracing = "0.1.37"
-tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
+tracing-subscriber = "0.3.17"
 opentelemetry-appender-tracing = { version = "0.27.0", default-features = false}
 opentelemetry = { version = "0.27.0", default-features = false, features = ["trace"] }
 opentelemetry_sdk = { version = "0.27.0", default-features = false, features = ["trace", "rt-tokio"] }
