feat: introduce chain summary struct

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -65,6 +65,7 @@ tar = "0.4.41"
 reqwest = { version = "0.12.7", default-features = false, features = ["blocking", "rustls-tls"] }
 paste = "1.0.15"
 tower-http = { version = "0.6.1", features = ["cors"] }
+chrono = { version = "0.4.39", default-features = false }
 
 [dev-dependencies]
 tempfile = "3.3.0"
