--- a/Cargo.toml
+++ b/Cargo.toml
@@ -65,6 +65,8 @@ tar = "0.4.41"
 reqwest = { version = "0.12.7", default-features = false, features = ["blocking", "rustls-tls"] }
 paste = "1.0.15"
 tower-http = { version = "0.6.1", features = ["cors"] }
+chrono = { version = "0.4.39", default-features = false }
+
 # UPLC dependencies
 uplc = { git = "https://github.com/pragma-org/uplc.git", optional = true }
 blst = "=0.3.13"
