fix: adjust mithril-client features for windows target (#418)

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -46,12 +46,6 @@ tokio-stream = { version = "0.1.14", features = ["sync"] }
 futures-util = "0.3.28"
 async-stream = "0.3.5"
 serde_with = "3.8.1"
-mithril-client = { version = "0.10.4", optional = true, default-features = false, features = [
-    "fs",
-    "rug-backend",
-    "rustls-tls",
-    "rustls-tls-webpki-roots",
-] }
 protoc-wkt = "1.0.0"
 itertools = "0.13.0"
 indicatif = "0.17.8"
@@ -66,6 +60,18 @@ reqwest = { version = "0.12.7", default-features = false, features = ["blocking"
 paste = "1.0.15"
 tower-http = { version = "0.6.1", features = ["cors"] }
 chrono = { version = "0.4.39", default-features = false }
+
+[target.'cfg(not(windows))'.dependencies.mithril-client]
+version = "0.10.4"
+optional = true
+default-features = false
+features = ["fs", "rug-backend", "rustls-tls", "rustls-tls-webpki-roots"]
+
+[target.'cfg(windows)'.dependencies.mithril-client]
+version = "0.10.4"
+optional = true
+default-features = false
+features = ["fs", "num-integer-backend", "rustls-tls", "rustls-tls-native-roots"]
 
 [dev-dependencies]
 tempfile = "3.3.0"
