--- a/Cargo.toml
+++ b/Cargo.toml
@@ -61,6 +61,11 @@ paste = "1.0.15"
 tower-http = { version = "0.6.1", features = ["cors"] }
 chrono = { version = "0.4.39", default-features = false }
 
+# phase2 dependencies
+uplc = { git = "https://github.com/pragma-org/uplc.git", optional = true }
+# blst = { version = "=0.3.13", optional = true }
+rug = { version = "1.26.1", optional = true }
+
 [target.'cfg(not(windows))'.dependencies.mithril-client]
 version = "0.10.4"
 optional = true
@@ -80,7 +85,8 @@ tempfile = "3.3.0"
 mithril = ["mithril-client"]
 utils = ["comfy-table", "inquire", "toml"]
 debug = ["console-subscriber", "tokio/tracing"]
-default = ["mithril", "utils"]
+phase2 = ["uplc", "rug"]
+default = ["mithril", "utils", "phase2"]
 
 # The profile that 'cargo dist' will build with
 [profile.dist]
