--- a/Cargo.toml
+++ b/Cargo.toml
@@ -100,7 +100,7 @@ cargo-dist-version = "0.14.1"
 # CI backends to support
 ci = "github"
 # The installers to generate for each app
-installers = ["shell", "powershell", "homebrew"]
+installers = ["shell", "powershell", "npm", "homebrew"]
 # A GitHub repo to push Homebrew formulas to
 tap = "txpipe/homebrew-tap"
 # Target platforms to build apps for (Rust target-triple syntax)
@@ -119,6 +119,12 @@ pr-run-mode = "plan"
 install-updater = false
 # The preferred Rust toolchain to use in CI (rustup toolchain syntax)
 rust-toolchain-version = "1.78.0"
+# The archive format to use for windows builds (defaults .zip)
+windows-archive = ".tar.gz"
+# The archive format to use for non-windows builds (defaults .tar.xz)
+unix-archive = ".tar.gz"
+# A namespace to use when publishing this package to the npm registry
+npm-scope = "@txpipe"
 
 [workspace.metadata.release]
 push = false
