--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,8 +16,8 @@ pallas = { git = "https://github.com/txpipe/pallas.git", features = ["hardano", 
 # pallas = { version = "^0.30.1", features = ["hardano", "applying"] }
 # pallas = { path = "../pallas/pallas", features = ["hardano", "applying"] }
 
-gasket = { git = "https://github.com/construkts/gasket-rs.git", features = ["derive"] }
-# gasket = { version = "^0.8", features = ["derive"] }
+# gasket = { git = "https://github.com/construkts/gasket-rs.git", features = ["derive"] }
+gasket = { version = "^0.9", features = ["derive"] }
 # gasket = { path = "../../construkts/gasket-rs/gasket", features = ["derive"] }
 
 redb = { version = "^2" }
