ci: disable windows until build issues are resolved

--- a/.github/workflows/validate.yml
+++ b/.github/workflows/validate.yml
@@ -3,9 +3,9 @@
 on:
   push:
     branches:
-     - '**'
+      - "**"
     tags-ignore:
-     - v*
+      - v*
 
 name: Validate
 
@@ -15,7 +15,11 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [windows-latest, ubuntu-latest, macOS-latest]
+        os: [
+            # windows-latest,
+            ubuntu-latest,
+            macOS-latest,
+          ]
         rust: [stable]
     runs-on: ${{ matrix.os }}
     steps:
