--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,7 +12,7 @@ authors = ["Santiago Carmuega <santiago@carmuega.me>"]
 
 
 [dependencies]
-pallas = { git = "https://github.com/txpipe/pallas.git", features = ["hardano", "applying"] }
+pallas = { git = "https://github.com/txpipe/pallas.git", features = ["hardano", "applying"]  }
 # pallas = { version = "0.32.0", features = ["hardano", "applying"] }
 # pallas = { path = "../pallas/pallas", features = ["hardano", "applying"] }
 
@@ -60,6 +60,14 @@ reqwest = { version = "0.12.7", default-features = false, features = ["blocking"
 paste = "1.0.15"
 tower-http = { version = "0.6.1", features = ["cors"] }
 chrono = { version = "0.4.39", default-features = false }
+
+jsonrpsee = { version = "0.24.9", features = ["server"] }
+http = "1.3.1"
+hyper = "1.5"
+tower = "0.4"
+base64 = "0.22.1"
+tx3-lang = { git = "https://github.com/txpipe/tx3", branch = "chore/decouple-ledger-from-u5c" }
+tx3-cardano = { git = "https://github.com/txpipe/tx3", branch = "chore/decouple-ledger-from-u5c" }
 
 # phase2 dependencies
 uplc = { git = "https://github.com/pragma-org/uplc.git", optional = true }
