Squashed commit of the following:
commit 74b6c6efef1e79cf58a17e0d0257155f0c2f430d
Author: Felipe Gonzalez <gonzalezz_felipe@hotmail.com>
Date:   Mon Apr 7 18:17:53 2025 -0300

    docs: Add MiniBF api section (#473)

commit 7384b41f71cd6e3ad57c3cd157d67263ca7fca95
Author: Felipe Gonzalez <gonzalezz_felipe@hotmail.com>
Date:   Mon Apr 7 12:53:28 2025 -0300

    chore: update docs to match v0.20 (#468)

commit 0ca41ba5bd2bca9e3d56c2e74559c133002bab0e
Author: Felipe Gonzalez <gonzalezz_felipe@hotmail.com>
Date:   Thu Apr 3 15:50:41 2025 -0300

    ci: use github ARM runner (#471)

commit c73a11892c37f618970d81af490c6f2872d09782
Author: Felipe Gonzalez <gonzalezz_felipe@hotmail.com>
Date:   Thu Apr 3 13:35:40 2025 -0300

    ci: trigger docker on `demeter` branch push (#470)

commit b993e05719b21daf8bcef95cc3fe2e77832aa1da
Author: Santiago Carmuega <santiago@carmuega.me>
Date:   Tue Apr 1 16:38:22 2025 -0300

    chore: Release dolos version 0.20.0

commit e6d9d6ef4a5b9cd1661404c0dbc41acfb1606fcb
Author: Santiago Carmuega <santiago@carmuega.me>
Date:   Tue Apr 1 16:34:14 2025 -0300

    chore: refresh example configs (#467)

commit c4195ed03807103368b8da28570936b1c562af09
Author: Felipe Gonzalez <gonzalezz_felipe@hotmail.com>
Date:   Tue Apr 1 15:43:39 2025 -0300

    chore: add minibf prompt to init (#466)

commit 8e4788d226cff071bc2d2924b71781f43fde0e58
Author: Felipe Gonzalez <gonzalezz_felipe@hotmail.com>
Date:   Tue Apr 1 15:39:42 2025 -0300

    feat(minibf): Implement `/txs/<hash>/cbor` endpoint (#465)

commit b0165f11ef7307effc118397b04a2020cbe6f1df
Author: Santiago Carmuega <santiago@carmuega.me>
Date:   Tue Apr 1 12:52:21 2025 -0300

    chore: update Pallas to latest main (#463)

commit 3bf9d9295cb72f8903e839fec856a6b96f4af751
Author: Felipe Gonzalez <gonzalezz_felipe@hotmail.com>
Date:   Tue Apr 1 11:42:33 2025 -0300

    fix: prompt for storage upgrade on init (#464)

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "dolos"
 description = "A Cardano data-node built in Rust"
-version = "0.19.1"
+version = "0.20.0"
 edition = "2021"
 repository = "https://github.com/txpipe/dolos"
 homepage = "https://github.com/txpipe/dolos"
@@ -12,9 +12,9 @@ authors = ["Santiago Carmuega <santiago@carmuega.me>"]
 
 
 [dependencies]
-pallas = { git = "https://github.com/txpipe/pallas.git", features = ["hardano", "applying"] }
-# pallas = { version = "0.32.0", features = ["hardano", "applying"] }
-# pallas = { path = "../pallas/pallas", features = ["hardano", "applying"] }
+pallas = { git = "https://github.com/txpipe/pallas.git", features = ["hardano"] }
+# pallas = { version = "0.32.0", features = ["hardano"] }
+# pallas = { path = "../pallas/pallas", features = ["hardano"] }
 
 # gasket = { git = "https://github.com/construkts/gasket-rs.git", features = ["derive"] }
 gasket = { version = "^0.9", features = ["derive"] }
@@ -60,11 +60,6 @@ reqwest = { version = "0.12.7", default-features = false, features = ["blocking"
 paste = "1.0.15"
 tower-http = { version = "0.6.1", features = ["cors"] }
 chrono = { version = "0.4.39", default-features = false }
-
-# phase2 dependencies
-uplc = { git = "https://github.com/pragma-org/uplc.git", optional = true }
-# blst = { version = "=0.3.13", optional = true }
-rug = { version = "1.26.1", optional = true }
 rocket = { version = "0.5", features = ["json"] }
 
 [target.'cfg(not(windows))'.dependencies.mithril-client]
@@ -86,7 +81,7 @@ tempfile = "3.3.0"
 mithril = ["mithril-client"]
 utils = ["comfy-table", "inquire", "toml"]
 debug = ["console-subscriber", "tokio/tracing"]
-phase2 = ["uplc", "rug"]
+phase2 = ["pallas/phase2"]
 default = ["mithril", "utils", "phase2"]
 
 # The profile that 'cargo dist' will build with
@@ -113,7 +108,7 @@ pr-run-mode = "plan"
 # Whether to install an updater program
 install-updater = false
 # The preferred Rust toolchain to use in CI (rustup toolchain syntax)
-rust-toolchain-version = "1.81.0"
+rust-toolchain-version = "1.85.1"
 # The archive format to use for windows builds (defaults .zip)
 windows-archive = ".tar.gz"
 # The archive format to use for non-windows builds (defaults .tar.xz)
