--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -3,6 +3,7 @@ on:
   push:
     branches:
       - "main"
+      - "demeter"
     tags:
       - "v*"
 
@@ -19,7 +20,7 @@ jobs:
             args: "--locked --release"
 
           - release_for: Linux-arm64
-            build_on: buildjet-2vcpu-ubuntu-2204-arm
+            build_on: ubuntu-22.04-arm
             target: "aarch64-unknown-linux-gnu"
             args: "--locked --release"
 
