--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,8 +12,8 @@ authors = ["Santiago Carmuega <santiago@carmuega.me>"]
 
 
 [dependencies]
-pallas = { git = "https://github.com/txpipe/pallas.git", features = ["hardano"] }
-# pallas = { version = "0.32.0", features = ["hardano"] }
+# pallas = { git = "https://github.com/txpipe/pallas.git", features = ["hardano"] }
+pallas = { version = "1.0.0-alpha.1", features = ["hardano"] }
 # pallas = { path = "../pallas/pallas", features = ["hardano"] }
 
 # gasket = { git = "https://github.com/construkts/gasket-rs.git", features = ["derive"] }
