--- a/Cargo.toml
+++ b/Cargo.toml
@@ -37,9 +37,6 @@ miette = { version = "7.4.0", features = ["fancy"] }
 tokio = { version = "^1.40", features = ["rt", "rt-multi-thread", "signal"] }
 tokio-util = { version = "0.7.11", features = ["rt"] }
 async-trait = "0.1.81"
-tonic = { version = "0.12.3", features = ["tls"] }
-tonic-web = "0.12.3"
-tonic-reflection = "0.12.3"
 bytes = "1.9.0"
 futures-core = "0.3.31"
 tokio-stream = { version = "0.1.14", features = ["sync"] }
@@ -61,19 +58,29 @@ paste = "1.0.15"
 tower-http = { version = "0.6.1", features = ["cors", "trace"] }
 chrono = { version = "0.4.39", default-features = false }
 
-jsonrpsee = { version = "0.24.9", features = ["server"] }
+# gRPC dependencies
+tonic = { version = "0.12.3", features = ["tls"], optional = true }
+tonic-web = { version = "0.12.3", optional = true }
+tonic-reflection = { version = "0.12.3", optional = true }
+
+# MiniBF dependencies
+axum = { version = "0.7.5", features = ["macros"], optional = true }
+
+# TRP dependencies
+jsonrpsee = { version = "0.24.9", features = ["server"], optional = true }
+
+# Common HTTP dependencies
 http = "1.3.1"
 hyper = "1.5"
 tower = "0.4"
 base64 = "0.22.1"
 tx3-lang = "0.2.0"
-tx3-cardano =  "0.2.0"
+tx3-cardano = "0.2.0"
 
 # phase2 dependencies
 uplc = { git = "https://github.com/pragma-org/uplc.git", optional = true }
 # blst = { version = "=0.3.13", optional = true }
 rug = { version = "1.26.1", optional = true }
-axum = { version = "0.7.5", features = ["macros"] }
 
 [target.'cfg(not(windows))'.dependencies.mithril-client]
 version = "0.10.4"
@@ -95,7 +102,14 @@ mithril = ["mithril-client"]
 utils = ["comfy-table", "inquire", "toml"]
 debug = ["console-subscriber", "tokio/tracing"]
 phase2 = ["pallas/phase2"]
-default = ["mithril", "utils", "phase2"]
+
+# Service features
+grpc = ["tonic", "tonic-web", "tonic-reflection", "tower-http/cors"]
+minibf = ["axum", "tower-http/cors", "tower-http/trace"]
+trp = ["jsonrpsee", "tower-http/cors"]
+
+# Default features - includes all services
+default = ["mithril", "utils", "phase2", "grpc", "minibf", "trp"]
 
 # The profile that 'cargo dist' will build with
 [profile.dist]
