--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,9 +20,17 @@ pallas = { version = "1.0.0-alpha.2", features = ["hardano"] }
 gasket = { version = "^0.9", features = ["derive"] }
 # gasket = { path = "../../construkts/gasket-rs/gasket", features = ["derive"] }
 
+# tx3-lang = "0.3.0"
+# tx3-cardano = "0.3.0"
+# tx3-lang = { path = "../../tx3-lang/tx3/crates/tx3-lang" }
+# tx3-cardano = { path = "../../tx3-lang/tx3/crates/tx3-cardano" }
+tx3-lang = { git = "https://github.com/tx3-lang/tx3.git" }
+tx3-cardano = { git = "https://github.com/tx3-lang/tx3.git" }
+
 redb = { version = "^2" }
 hex = "0.4.3"
 bech32 = "0.11.0"
+base64 = "0.22.1"
 clap = { version = "4.5.37", features = ["derive"] }
 log = "0.4.18"
 config = { version = "0.14.1", default-features = false, features = ["toml", "json"] }
@@ -73,9 +81,6 @@ jsonrpsee = { version = "0.24.9", features = ["server"], optional = true }
 http = "1.3.1"
 hyper = "1.5"
 tower = "0.4"
-base64 = "0.22.1"
-tx3-lang = "0.3.0"
-tx3-cardano = "0.3.0"
 
 
 [target.'cfg(not(windows))'.dependencies.mithril-client]
