--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,9 +12,14 @@ authors = ["Santiago Carmuega <santiago@carmuega.me>"]
 
 
 [dependencies]
-pallas = { git = "https://github.com/txpipe/pallas.git", features = ["hardano"] }
-# pallas = { version = "1.0.0-alpha.2", features = ["hardano"] }
-# pallas = { path = "../pallas/pallas", features = ["hardano"] }
+pallas.workspace = true
+thiserror.workspace = true
+tracing.workspace = true
+serde.workspace = true
+chrono.workspace = true
+
+dolos-core = { path = "crates/core" }
+dolos-cardano = { path = "crates/cardano" }
 
 # gasket = { git = "https://github.com/construkts/gasket-rs.git", features = ["derive"] }
 gasket = { version = "^0.9", features = ["derive"] }
@@ -34,11 +39,8 @@ base64 = "0.22.1"
 clap = { version = "4.5.37", features = ["derive"] }
 log = "0.4.18"
 config = { version = "0.14.1", default-features = false, features = ["toml", "json"] }
-serde = { version = "1.0.136", features = ["derive"] }
 serde_json = "1.0.122"
-thiserror = "2.0.12"
 lazy_static = "1.4.0"
-tracing = "0.1.37"
 tracing-subscriber = "0.3.17"
 bincode = "1.3.3"
 miette = { version = "7.4.0", features = ["fancy"] }
@@ -64,7 +66,7 @@ tar = "0.4.41"
 reqwest = { version = "0.12.7", default-features = false, features = ["blocking", "rustls-tls"] }
 paste = "1.0.15"
 tower-http = { version = "0.6.1", features = ["cors", "trace"] }
-chrono = { version = "0.4.39", default-features = false }
+
 
 # gRPC dependencies
 tonic = { version = "0.12.3", features = ["tls"], optional = true }
@@ -116,6 +118,18 @@ default = ["mithril", "utils", "phase2", "grpc", "minibf", "trp"]
 [profile.dist]
 inherits = "release"
 lto = "thin"
+
+[workspace]
+members = ["crates/cardano", "crates/core"]
+
+[workspace.dependencies]
+pallas = { git = "https://github.com/txpipe/pallas.git", features = ["hardano"] }
+# pallas = { version = "1.0.0-alpha.2", features = ["hardano"] }
+# pallas = { path = "../pallas/pallas", features = ["hardano"] }
+thiserror = "2.0.12"
+tracing = "0.1.37"
+serde = { version = "1.0.136", features = ["derive"] }
+chrono = { version = "0.4.39", default-features = false }
 
 [workspace.metadata.release]
 push = false
