refactor: split minibf into new crate

--- a/crates/core/Cargo.toml
+++ b/crates/core/Cargo.toml
@@ -9,3 +9,6 @@ thiserror.workspace = true
 
 # TODO: we shouldn't need Pallas in core
 pallas.workspace = true
+
+[features]
+phase2 = ["pallas/phase2"]
