--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,16 +10,19 @@ license = "Apache-2.0"
 readme = "README.md"
 authors = ["Santiago Carmuega <santiago@carmuega.me>"]
 
-
 [dependencies]
 pallas.workspace = true
 thiserror.workspace = true
 tracing.workspace = true
 serde.workspace = true
 chrono.workspace = true
+tokio.workspace = true
+tokio-util.workspace = true
+tower-http.workspace = true
 
 dolos-core = { path = "crates/core" }
 dolos-cardano = { path = "crates/cardano" }
+dolos-minibf = { path = "crates/minibf", optional = true }
 
 # gasket = { git = "https://github.com/construkts/gasket-rs.git", features = ["derive"] }
 gasket = { version = "^0.9", features = ["derive"] }
@@ -44,8 +47,6 @@ lazy_static = "1.4.0"
 tracing-subscriber = "0.3.17"
 bincode = "1.3.3"
 miette = { version = "7.4.0", features = ["fancy"] }
-tokio = { version = "^1.40", features = ["rt", "rt-multi-thread", "signal"] }
-tokio-util = { version = "0.7.11", features = ["rt"] }
 async-trait = "0.1.81"
 bytes = "1.9.0"
 futures-core = "0.3.31"
@@ -65,16 +66,12 @@ flate2 = "1.0.34"
 tar = "0.4.41"
 reqwest = { version = "0.12.7", default-features = false, features = ["blocking", "rustls-tls"] }
 paste = "1.0.15"
-tower-http = { version = "0.6.1", features = ["cors", "trace"] }
 
 
 # gRPC dependencies
 tonic = { version = "0.12.3", features = ["tls"], optional = true }
 tonic-web = { version = "0.12.3", optional = true }
 tonic-reflection = { version = "0.12.3", optional = true }
-
-# MiniBF dependencies
-axum = { version = "0.8.4", features = ["macros"], optional = true }
 
 # TRP dependencies
 jsonrpsee = { version = "0.24.9", features = ["server"], optional = true }
@@ -104,11 +101,11 @@ tempfile = "3.20.0"
 mithril = ["mithril-client"]
 utils = ["comfy-table", "inquire", "toml"]
 debug = ["console-subscriber", "tokio/tracing"]
-phase2 = ["pallas/phase2"]
+phase2 = ["pallas/phase2", "dolos-core/phase2", "dolos-minibf/phase2"]
 
 # Service features
 grpc = ["tonic", "tonic-web", "tonic-reflection", "tower-http/cors"]
-minibf = ["axum", "tower-http/cors", "tower-http/trace"]
+minibf = ["dolos-minibf", "tower-http/cors", "tower-http/trace"]
 trp = ["jsonrpsee", "tower-http/cors"]
 
 # Default features - includes all services
@@ -120,7 +117,7 @@ inherits = "release"
 lto = "thin"
 
 [workspace]
-members = ["crates/cardano", "crates/core"]
+members = ["crates/cardano", "crates/core", "crates/minibf"]
 
 [workspace.dependencies]
 pallas = { git = "https://github.com/txpipe/pallas.git", features = ["hardano"] }
@@ -130,6 +127,9 @@ thiserror = "2.0.12"
 tracing = "0.1.37"
 serde = { version = "1.0.136", features = ["derive"] }
 chrono = { version = "0.4.39", default-features = false }
+tokio = { version = "^1.40", features = ["rt", "rt-multi-thread", "signal"] }
+tokio-util = { version = "0.7.11", features = ["rt"] }
+tower-http = { version = "0.6.1", features = ["cors", "trace"] }
 
 [workspace.metadata.release]
 push = false
