refactor: abstract core domain as a trait

--- a/crates/core/Cargo.toml
+++ b/crates/core/Cargo.toml
@@ -6,6 +6,10 @@ edition = "2024"
 [dependencies]
 serde.workspace = true
 thiserror.workspace = true
+trait-variant.workspace = true
+itertools.workspace = true
+tracing.workspace = true
+futures-core.workspace = true
 
 # TODO: we shouldn't need Pallas in core
 pallas.workspace = true
