--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,9 +19,15 @@ chrono.workspace = true
 tokio.workspace = true
 tokio-util.workspace = true
 tower-http.workspace = true
+itertools.workspace = true
+bincode.workspace = true
+trait-variant.workspace = true
+hex.workspace = true
+futures-core.workspace = true
 
 dolos-core = { path = "crates/core" }
 dolos-cardano = { path = "crates/cardano" }
+dolos-redb = { path = "crates/redb" }
 dolos-minibf = { path = "crates/minibf", optional = true }
 
 # gasket = { git = "https://github.com/construkts/gasket-rs.git", features = ["derive"] }
@@ -35,8 +41,6 @@ gasket = { version = "^0.9", features = ["derive"] }
 tx3-lang = { git = "https://github.com/tx3-lang/tx3.git" }
 tx3-cardano = { git = "https://github.com/tx3-lang/tx3.git" }
 
-redb = { version = "^2" }
-hex = "0.4.3"
 bech32 = "0.11.0"
 base64 = "0.22.1"
 clap = { version = "4.5.37", features = ["derive"] }
@@ -45,19 +49,15 @@ config = { version = "0.14.1", default-features = false, features = ["toml", "js
 serde_json = "1.0.122"
 lazy_static = "1.4.0"
 tracing-subscriber = "0.3.17"
-bincode = "1.3.3"
 miette = { version = "7.4.0", features = ["fancy"] }
 async-trait = "0.1.81"
 bytes = "1.9.0"
-futures-core = "0.3.31"
 tokio-stream = { version = "0.1.14", features = ["sync"] }
 futures-util = "0.3.28"
 async-stream = "0.3.5"
 serde_with = "3.8.1"
 protoc-wkt = "1.0.0"
-itertools = "0.13.0"
 indicatif = "0.17.8"
-trait-variant = "0.1.2"
 comfy-table = { version = "7.1.1", optional = true }
 inquire = { version = "0.7.5", optional = true }
 toml = { version = "0.8.13", optional = true }
@@ -117,14 +117,19 @@ inherits = "release"
 lto = "thin"
 
 [workspace]
-members = ["crates/cardano", "crates/core", "crates/minibf"]
+members = ["crates/cardano", "crates/core", "crates/minibf", "crates/redb"]
 
 [workspace.dependencies]
 pallas = { git = "https://github.com/txpipe/pallas.git", features = ["hardano"] }
 # pallas = { version = "1.0.0-alpha.2", features = ["hardano"] }
 # pallas = { path = "../pallas/pallas", features = ["hardano"] }
 thiserror = "2.0.12"
+hex = "0.4.3"
 tracing = "0.1.37"
+itertools = "0.13.0"
+bincode = "1.3.3"
+futures-core = "0.3.31"
+trait-variant = "0.1.2"
 serde = { version = "1.0.136", features = ["derive"] }
 chrono = { version = "0.4.39", default-features = false }
 tokio = { version = "^1.40", features = ["rt", "rt-multi-thread", "signal"] }
