--- a/crates/redb/Cargo.toml
+++ b/crates/redb/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "dolos-minibf"
+name = "dolos-redb"
 version = "0.1.0"
 edition = "2024"
 
@@ -11,14 +11,9 @@ tokio-util.workspace = true
 pallas.workspace = true
 tower-http.workspace = true
 itertools.workspace = true
+bincode.workspace = true
+hex.workspace = true
 
 dolos-core = { path = "../core" }
-dolos-cardano = { path = "../cardano" }
 
-axum = { version = "0.8.4", features = ["macros"] }
-hex = "0.4.3"
-serde_json = "1.0.140"
-bech32 = "0.11.0"
-
-[features]
-phase2 = ["pallas/phase2"]
+redb = { version = "^2" }
