chore: update tx3 lib to v0.6.0

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -34,12 +34,12 @@ dolos-minibf = { path = "crates/minibf", optional = true }
 gasket = { version = "^0.9", features = ["derive"] }
 # gasket = { path = "../../construkts/gasket-rs/gasket", features = ["derive"] }
 
-# tx3-lang = "0.4.1"
-# tx3-cardano = "0.4.1"
+tx3-lang = "0.6.0"
+tx3-cardano = "0.6.0"
 # tx3-lang = { path = "../../tx3-lang/tx3/crates/tx3-lang" }
 # tx3-cardano = { path = "../../tx3-lang/tx3/crates/tx3-cardano" }
-tx3-lang = { git = "https://github.com/tx3-lang/tx3.git" }
-tx3-cardano = { git = "https://github.com/tx3-lang/tx3.git" }
+# tx3-lang = { git = "https://github.com/tx3-lang/tx3.git" }
+# tx3-cardano = { git = "https://github.com/tx3-lang/tx3.git" }
 
 bech32 = "0.11.0"
 base64 = "0.22.1"
