--- a/crates/minibf/Cargo.toml
+++ b/crates/minibf/Cargo.toml
@@ -9,6 +9,7 @@ serde.workspace = true
 tokio.workspace = true
 tokio-util.workspace = true
 pallas.workspace = true
+tower.workspace = true
 tower-http.workspace = true
 itertools.workspace = true
 
